--- a/main.yml
+++ b/main.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v4
  
     - name: Build Docker Image
-      run: docker build -t flask-app .
+      run: docker build -t falsk_demo .
  
     - name: Deploy to EC2
       uses: appleboy/ssh-action@v1.0.3
@@ -23,7 +23,7 @@ jobs:
         username: ${{ secrets.EC2_USER }}
         key: ${{ secrets.EC2_KEY }}
         script: |
-          docker stop flask-app || true
-          docker rm flask-app || true
-          docker build -t flask-app .
-          docker run -d --name flask-app -p 5000:5000 flask-app
+          docker stop falsk_demo || true
+          docker rm falsk_demo || true
+          docker build -t falsk_demo .
+          docker run -d --name suspicious_spence -p 5000:5000 falsk_demo
