--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,30 +1,60 @@
-name: CI-CD Flask App
+name: CI/CD Pipeline
  
 on:
+
   push:
+
     branches:
+
       - main
  
 jobs:
-  deploy:
+
+  build-and-deploy:
+
     runs-on: ubuntu-latest
  
     steps:
-    - name: Checkout Code
-      uses: actions/checkout@v4
+
+    - name: Checkout code
+
+      uses: actions/checkout@v3
  
-    - name: Build Docker Image
-      run: docker build -t falsk_demo .
- 
-    - name: Deploy to EC2
-      uses: appleboy/ssh-action@v1.0.3
+    - name: Set up Python
+
+      uses: actions/setup-python@v4
+
       with:
-        host: ${{ secrets.EC2_HOST }}
-        username: ${{ secrets.EC2_USER }}
-        key: ${{ secrets.EC2_KEY }}
-        debug: true
-        script: |
+
+        python-version: '3.9'
+ 
+    - name: Test the application
+
+      run: python -m unittest discover
+ 
+    - name: Set up SSH
+
+      uses: webfactory/ssh-agent@v0.5.4
+
+      with:
+
+        ssh-private-key: ${{ secrets.EC2_KEY }}
+ 
+    - name: Deploy and Restart Application
+
+      run: |
+
+        ssh -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
+
+          cd /home/ubuntu/flask_app || { echo "Directory not found"; exit 1; }
+
+          docker build -t falsk_demo .
+
           docker stop suspicious_spence || true
+
           docker rm suspicious_spence || true
-          docker build -t suspicious_spence .
-          docker run -d --name suspicious_spence -p 5000:5000 falsk_demo
+
+          docker run -d -p 80:5000 --name suspicious_spence falsk_demo
+
+        EOF
+ 
